change staging secret regcredapp

--- a/main/staging/namespaces/core/deployment.yaml
+++ b/main/staging/namespaces/core/deployment.yaml
@@ -11,6 +11,8 @@ spec:
       labels:
         app: myapp
     spec:
+      # imagePullSecret:
+      #   - name: regcredapp
       containers:
         - name: myapp
           image: nginx:alpine
