add staging core secret dockersecretapp-db

--- a/main/staging/namespaces/core/kustomization.yaml
+++ b/main/staging/namespaces/core/kustomization.yaml
@@ -8,3 +8,4 @@ resources:
   - deployment.yaml
   - ../../modules/dockersecret.yaml
   - ../../modules/dockersecretapp.yaml
+  - ../../modules/dockersecretapp-db.yaml
