chane staging-core-deployment to regcred2

--- a/main/staging/namespaces/core/deployment.yaml
+++ b/main/staging/namespaces/core/deployment.yaml
@@ -12,7 +12,7 @@ spec:
         app: myapp
     spec:
       imagePullSecret:
-        - name: regcredapp
+        - name: regcred2
       containers:
         - name: myapp
           # image: nginx:alpine
