--- a/main/staging/namespaces/core/deployment.yaml
+++ b/main/staging/namespaces/core/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp-core-simple-webapp
+  name: myapp-simple-webapp
 spec:
   selector:
     matchLabels:
@@ -11,7 +11,7 @@ spec:
       labels:
         app: myapp
     spec:
-      imagePullSecret:
+      imagePullSecrets:
         - name: regcred2
       containers:
         - name: myapp
