change name docker registry repo

--- a/main/production/namespaces/core/deployment.yaml
+++ b/main/production/namespaces/core/deployment.yaml
@@ -17,7 +17,8 @@ spec:
       #   - name: regcred
       containers:
         - name: myapp-core2
-          image: rudicatsmile2/simple-webapp:1
+          # image: rudicatsmile2/simple-webapp:1
+          image: rudicatsmile2/simplelandingpage:8
           resources:
             limits:
               memory: "64Mi"
