--- a/main/staging/namespaces/core/deployment.yaml
+++ b/main/staging/namespaces/core/deployment.yaml
@@ -16,7 +16,8 @@ spec:
       containers:
         - name: myapp
           # image: nginx:alpine
-          image: rudicatsmile2/simple-webapp:1 # {"$imagepolicy": "flux-system:simplewebapp-policy"}
+          # image: rudicatsmile2/simple-webapp:1 # {"$imagepolicy": "flux-system:simplewebapp-policy"}
+          image: rudicatsmile2/simplelandingpage:8 # {"$imagepolicy": "flux-system:simplewebapp-policy"}
 
           resources:
             limits:
